--- a/index.html
+++ b/index.html
@@ -9,24 +9,43 @@
 </head>
 <body>
     <section class="top-banner">
-        <div class="half-side">
+        <div class="half-width">
             <h1> Welcome To </h1>
             <h1> <span class="text-highlight"> Rahul </span> Website </h1>
             <h3> Full Stack Web Developer </h3>
             <p> I’ll develop your website. Helping you create digital experience, reach customers and grow business. It will be professional responsive design. </p>
             <a class="hire-btn" target="_blank" href="https://www.linkedin.com/in/dev-pabon/"> HIRE ME</a>
         </div>
-        <div class="half-side">
+        <div class="half-width">
             <img src="img/profile1.png" alt="profile-image">
         </div>
     </section>
     <section class="dream-section">
-        <div class="half-side">
+        <div class="half-width">
             <img src="img/profile2.png" alt="profile-image02">
         </div>
         <div class="half-width">
-
+            <h1> Big Dream </h1>
+            <h3> Become World's No. 1 Developer </h3>
+            <p> I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics. </p>
+            <a class="hire-btn" target="_blank" href="https://www.linkedin.com/in/dev-pabon/"> DOWNLOAD RESUME </a>
         </div>
     </section>
+    <section class="experiences-section">
+        <h2> Experiences </h2>
+        <div id="single-exp-1" class="half-width single-experiences">
+            <h2> Full Stack Web Developer </h2>
+            <h3 class="text-highlight"> 2020 - Present | Pro level Web Developer </h3>
+            <p> Qualified web designs and attractive effects which catches visitor's Eye.Responsive Design which will be working almost all browsers and screens, Mobile, Tab, PC etc. Clean and fresh issue free code to make your website dynamic perfectly.  </p>
+        </div>
+        <div id="single-exp-2" class="half-width single-experiences">
+            <h2> Full Stack Web Developer </h2>
+            <h3 class="text-highlight"> 2020-2021 | Programming Hero Learner </h3>
+            <p> Qualified web designs and attractive effects which catches visitor's Eye.Responsive Design which will be working almost all browsers and screens, Mobile, Tab, PC etc. Clean and fresh issue free code to make your website dynamic perfectly.  </p>
+        </div>
+    </section>
+    <footer>
+        <p> © Rahul 2021, all rights reserved.</p>
+    </footer>
 </body>
 </html>
